; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_lrcdec.c_read_line.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_lrcdec.c_read_line.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @read_line to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_line(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @avio_tell(i32* %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @av_bprint_clear(i32* %9)
  br label %11

11:                                               ; preds = %29, %2
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @avio_feof(i32* %12)
  %14 = icmp ne i32 %13, 0
  %15 = xor i1 %14, true
  br i1 %15, label %16, label %30

16:                                               ; preds = %11
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @avio_r8(i32* %17)
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %6, align 4
  %20 = icmp ne i32 %19, 13
  br i1 %20, label %21, label %25

21:                                               ; preds = %16
  %22 = load i32*, i32** %3, align 8
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @av_bprint_chars(i32* %22, i32 %23, i32 1)
  br label %25

25:                                               ; preds = %21, %16
  %26 = load i32, i32* %6, align 4
  %27 = icmp eq i32 %26, 10
  br i1 %27, label %28, label %29

28:                                               ; preds = %25
  br label %30

29:                                               ; preds = %25
  br label %11

30:                                               ; preds = %28, %11
  %31 = load i32, i32* %5, align 4
  ret i32 %31
}

declare dso_local i32 @avio_tell(i32*) #1

declare dso_local i32 @av_bprint_clear(i32*) #1

declare dso_local i32 @avio_feof(i32*) #1

declare dso_local i32 @avio_r8(i32*) #1

declare dso_local i32 @av_bprint_chars(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
